# solid-fuse

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  package.json  vercel.json
.github/workflows/: build-all-platforms.yml  precompile-binaries.yml
android/: build.gradle
cargokit/build_tool/lib/src/: builder.dart  darwin_environment.dart  environment.dart
cargokit/build_tool/test/: darwin_environment_test.dart
cargokit/gradle/: plugin.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/assets/examples/: array_filter.js  array_reduce.js  arrow_function.js  async_await.js  closure.js  crypto_example.js  destructuring.js  fs_example.js  json_stringify.js  llrt_assert.js  llrt_buffer.js  llrt_console.js  llrt_crypto_hash.js  llrt_fetch.js  llrt_fs_readfile.js  llrt_path.js  llrt_process.js  llrt_util.js  math_operations.js  module_comprehensive.js  module_filesystem.js  module_mixed_import.js  module_named_import.js  optional_chaining.js  path_example.js  promise_all.js  random_number.js  recursive.js  regex_match.js  script_basic_operations.js  script_dynamic_import.js  script_global_objects.js  script_json.js  script_promises.js  script_regex.js  script_timers.js  set_operations.js  spread_operator.js  string_methods.js  test_assert.js  (+12 more)
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/app/: home_screen.dart  router.dart  theme.dart
example/lib/screens/: api_overview_screen.dart  engine_api_screen.dart  error_api_screen.dart  example_screen.dart  playground_screen.dart  runtime_api_screen.dart  value_api_screen.dart
example/lib/services/: fjs_service.dart
example/lib/widgets/: code_editor_widget.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/runner/: Runner.rc
examples/demo/: AGENTS.md  README.md  fuse.config.ts  package.json  tsconfig.json
examples/demo/dart/: README.md  pubspec.yaml  pubspec_overrides.yaml
examples/demo/dart/assets/js/: bundle.js
examples/demo/dart/ios/Runner/: Info.plist
examples/demo/dart/ios/Runner.xcodeproj/: project.pbxproj
examples/demo/dart/lib/: main.dart
examples/demo/dart/lib/_generated/: fuse_packages.dart
examples/demo/src/: image-test-entry.tsx  index.tsx  sliver-test-entry.tsx  tabs-test-entry.tsx  ui.tsx
examples/demo/src/screens/: counter.tsx  home.tsx  icon.tsx  scroll.tsx  sliver.tsx  text-field.tsx
examples/polyfill_tests/: README.md  pubspec.yaml
examples/polyfill_tests/assets/: polyfills.js
examples/polyfill_tests/assets/js/: image_bundle.js  sliver_bundle.js  tabs_bundle.js
examples/polyfill_tests/integration_test/: bridge_concurrency_test.dart  builtins_test.dart  channels_roundtrip_test.dart  engine_lifecycle_test.dart  image_test.dart  slivers_test.dart  tabs_test.dart  url_test.dart  ws_test.dart
examples/polyfill_tests/macos/Runner.xcodeproj/: project.pbxproj
examples/polyfill_tests/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/polyfill_tests/macos/Runner/Configs/: AppInfo.xcconfig
examples/polyfill_tests/test/: widget_test.dart
examples/polyfill_tests/tool/: build_bundle.ts  build_image_bundle.ts  build_sliver_bundle.ts  build_tabs_bundle.ts
ios/: fjs.podspec
lib/: fjs.dart
lib/src/frb/api/: engine.dart  error.freezed.dart  runtime.dart  source.dart  source.freezed.dart  value.dart
libfjs/: Cargo.toml  cargokit.yaml
libfjs/src/: bytecode_support.rs  js_executor.rs
libfjs/src/api/: bytecode.rs  engine.rs  error.rs  mod.rs  module.rs  source.rs
libfjs/src/tests/: async_tests.rs  boundary_tests.rs  module_tests.rs  runtime_tests.rs
macos/: fjs.podspec
notes/: fjs-fork.md  multi-engine.md  slivers-implementation-spec.md  vendoring-fjs.md
